--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,9 @@
 .App {
+  background-color: var(--clr-very-light-gray);
+
+  height: 100vh;
+}
+
+.App.dark-mode {
+  background-color: var(--clr-almost-black);
 }
