--- a/src/index.css
+++ b/src/index.css
@@ -258,6 +258,24 @@ input:focus::placeholder {
     color: var(--clr-gray);
   }
 
+  /* Buttons & inputs */
+  input[type='text'] {
+    font-size: var(--fs-18);
+  }
+
+  input::placeholder {
+    font-size: var(--fs-18);
+  }
+
+  .btn {
+    display: inline-block;
+    height: 100%;
+    padding: 0.75em 1.45em;
+    border-radius: 0.625em;
+
+    font-size: var(--fs-16);
+  }
+
   /* Utility styles */
   .wrapper {
     max-width: 573px;
