--- a/src/components/Toggle.css
+++ b/src/components/Toggle.css
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
+}
+
+.Toggle:hover,
+.Toggle:focus {
+  opacity: 0.6;
 }
 
 .mode__light {
